--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
+    "axios": "^0.21.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.0",
     "file-loader": "^6.0.0",
@@ -24,5 +25,8 @@
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.14.5"
   }
 }
