--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-setup-tutorial",
+  "name": "react-hacker-news",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,9 +16,11 @@
     "@babel/preset-react": "^7.10.4",
     "axios": "^0.21.1",
     "babel-loader": "^8.1.0",
+    "cors": "^2.8.5",
     "css-loader": "^4.2.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "node-fetch": "^2.6.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "style-loader": "^1.2.1",
@@ -27,6 +29,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.14.5"
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "http-proxy-middleware": "^2.0.0"
   }
 }
